Atualização de Aulas NNA

--- a/aulas/NMA/aula01/index.html
+++ b/aulas/NMA/aula01/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Primeiro Exemplo em JavaScript</h1>
     <script>
-        window.alert("Olá, Mundo!")
+        window.alert('Olá, Mundo!")
     </script>
 </body>
 </html>
